--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   <meta name="keywords" content="education, studying">
   <meta name="author" content="hiddaaan">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
   <div class="page">
     <header class="header">
       <h1 class="header__title">Научиться учиться</h1>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="Обложка" class="header__main-illustration">
       <div class="logo logo_place_header"></div>
-      <div class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &RightArrow;</a>
-      </div>
+        <a href="#" target="_blank" class="header__link">Узнать &rarr;</a>
+      </p>
     </header>
-    <div class="content">
+    <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -40,7 +40,7 @@
               Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
@@ -49,27 +49,27 @@
           <div class="cards__item">
             <img src="./images/cards-attention.png" alt="Два вида внимания" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
-            <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</div>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-recall.png" alt="Recall" class="cards__image">
+            <img src="./images/cards-recall.png" alt="Вспоминать" class="cards__image">
             <h3 class="cards__title">Recall</h3>
-            <div class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</div>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
-            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</div>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
-            <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</div>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
-            <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</div>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
       </section>
@@ -82,7 +82,7 @@
         </div>
       </section>
       <section class="oakley">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -93,12 +93,12 @@
               кому всё ясно с первого взгляда.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="#" class="feynman__link">Подробнее &RightArrow;</a>
+        <a href="#" target="_blank" class="feynman__link">Подробнее &RightArrow;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -142,18 +142,18 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <div class="khan__author">Салман Хан</div>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <div class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
             которые приносят успех в школе, карьере и жизни.
-          </div>
-          <div class="khan__quote-author">Джордж Лукас</div>
-          <div class="khan__quote-author-subline">Кинорежиссер, продюсер</div>
+          </blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Купить книгу" class="khan__book-pic">
-            <a href="#" class="khan__buy-link">Купить книгу &LongRightArrow;</a>
+            <a href="#" target="_blank" class="khan__buy-link">Купить книгу &LongRightArrow;</a>
           </div>
         </div>
       </section>
@@ -202,57 +202,57 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__link">
+          <a href="#" target="_blank" class="resources__link">
             <img src="./images/logo/resources-arzamas.svg" alt="arzamas" class="resources__logo">
           </a>
-          <a href="#" class="resources__link">
+          <a href="#" target="_blank" class="resources__link">
             <img src="./images/logo/resources-n1.svg" alt="n1" class="resources__logo">
           </a>
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-strelka.svg" alt="strelka" class="resources__logo">
+          <a href="#" target="_blank" class="resources__link">
+            <img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
           </a>
-          <a href="#" class="resources__link">
-            <img src="./images/logo/resources-polka.svg" alt="polka" class="resources__logo">
+          <a href="#" target="_blank" class="resources__link">
+            <img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
           </a>
         </div>
       </section>
-    </div>
+    </main>
     <footer class="footer">
-      <div class="columns">
-        <div class="column column_content_copyright">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; Наруто Узумаки</div>
+          <p class="footer__author">&copy; Наруто Узумаки</p>
         </div>
-        <div class="column column_content_info">
+        <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепция</a>
-            <a href="#" class="footer__column-link">Наставники</a>
-          </div>
+          <nav class="footer__column-links">
+            <a href="#" target="_blank" class="footer__column-link">Главная</a>
+            <a href="#" target="_blank" class="footer__column-link">Концепция</a>
+            <a href="#" target="_blank" class="footer__column-link">Наставники</a>
+          </nav>
         </div>
-        <div class="column column_content_social">
+        <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link">
+          <nav class="footer__column-links">
+            <a href="#" target="_blank" class="footer__column-link">
               <img src="./images/youtube-icon.svg" alt="YouTube" class="footer__social-icon">
               YouTube
             </a>
-            <a href="#" class="footer__column-link">
+            <a href="#" target="_blank" class="footer__column-link">
               <img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">
               ВКонтакте
             </a>
-            <a href="#" class="footer__column-link">
+            <a href="#" target="_blank" class="footer__column-link">
               <img src="./images/tiktok-icon.svg" alt="TikTok" class="footer__social-icon">
               TikTok
             </a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
